--- a/public/stylesheets/resp_1150.scss
+++ b/public/stylesheets/resp_1150.scss
@@ -52,6 +52,9 @@
         }
     
         div.feature-cards{
+
+            margin: 0 0 32px 0;
+
             article{
                 div.feature-card-img{
                     img{
@@ -74,23 +77,38 @@
     }
     
     section.prices{
-        
-        padding: 0 32px;
-    
-        div.subtitle-container{
-            h2{
-                font-size: 28px;
-            }
-        }
-    
         article.prices{
-            div.price-cards{
-                div.big {
-                    flex: .65;
+            div.subtitle-container{
+                h2{
+                    font-size: 28px;
                 }
+            }
+
+            div.content-container{
+
+                margin-top: 40px;
     
                 div.small{
-                    flex: .32;
+                    div.subtitle-container{
+                        h2{
+                            font-size: 34px;
+                        }
+                    }
+                    div.paragraph-container{
+                        p{
+                            width: 100%;
+                        }
+                    }
+                    div.button-container{
+                        a{
+                            padding: 8px 56px;
+
+                            img{
+                                width: 55%;
+                            }
+                        }
+    
+                    }
                 }
             }
         }
@@ -108,9 +126,9 @@
         }
     }
 
-    section.getting-started{
+    div.getting-started{
     
-        padding: 0 32px 32px 32px;
+        padding: 0 32px 0 32px;
     
         div.subtitle-container{
             h2{
