--- a/public/stylesheets/resp_1150.css
+++ b/public/stylesheets/resp_1150.css
@@ -28,6 +28,9 @@
   section.features div.feature-cards {
     margin-top: 45px;
   }
+  section.features div.feature-cards {
+    margin: 0 0 32px 0;
+  }
   section.features div.feature-cards article div.feature-card-img img {
     width: 248px;
     height: 248px;
@@ -38,21 +41,23 @@
   section.features div.feature-cards article div.text-container p {
     font-size: 15px;
   }
-  section.prices {
-    padding: 0 32px;
-  }
-  section.prices div.subtitle-container h2 {
+  section.prices article.prices div.subtitle-container h2 {
     font-size: 28px;
   }
-  section.prices article.prices div.price-cards div.big {
-    -webkit-box-flex: .65;
-        -ms-flex: .65;
-            flex: .65;
+  section.prices article.prices div.content-container {
+    margin-top: 40px;
   }
-  section.prices article.prices div.price-cards div.small {
-    -webkit-box-flex: .32;
-        -ms-flex: .32;
-            flex: .32;
+  section.prices article.prices div.content-container div.small div.subtitle-container h2 {
+    font-size: 34px;
+  }
+  section.prices article.prices div.content-container div.small div.paragraph-container p {
+    width: 100%;
+  }
+  section.prices article.prices div.content-container div.small div.button-container a {
+    padding: 8px 56px;
+  }
+  section.prices article.prices div.content-container div.small div.button-container a img {
+    width: 55%;
   }
   section.videos {
     padding: 0 32px;
@@ -60,22 +65,22 @@
   section.videos article.demo-video div.subtitle-container h2 {
     font-size: 28px;
   }
-  section.getting-started {
-    padding: 0 32px 32px 32px;
+  div.getting-started {
+    padding: 0 32px 0 32px;
   }
-  section.getting-started div.subtitle-container h2 {
+  div.getting-started div.subtitle-container h2 {
     font-size: 28px;
   }
-  section.getting-started div.content div.content-right {
+  div.getting-started div.content div.content-right {
     padding-left: 16px;
   }
-  section.getting-started div.content div.content-right h3 {
+  div.getting-started div.content div.content-right h3 {
     font-size: 19px;
   }
-  section.getting-started div.content div.content-right span {
+  div.getting-started div.content div.content-right span {
     font-size: 15px;
   }
-  section.getting-started div.content div.content-right div.link-container a {
+  div.getting-started div.content div.content-right div.link-container a {
     font-size: 15px;
   }
   section.contact {
