--- a/public/stylesheets/resp_945.css
+++ b/public/stylesheets/resp_945.css
@@ -23,6 +23,30 @@
   section.features div.feature-cards {
     margin-top: 45px;
   }
+  section.features div.feature-cards {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    padding: 64px;
+    margin: -32px 0;
+  }
+  section.features div.feature-cards article:nth-child(1) {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  section.features div.feature-cards article:nth-child(2) {
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
+  section.features div.feature-cards article:nth-child(3) {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  section.features div.feature-cards article:nth-child(4) {
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
   section.features div.feature-cards article div.feature-card-img img {
     width: 240px;
     height: 240px;
@@ -36,19 +60,51 @@
   section.prices {
     padding: 0 16px;
   }
-  section.prices div.subtitle-container h2 {
+  section.prices article.prices div.subtitle-container h2 {
     font-size: 26px;
-    margin: 16px 0;
   }
-  section.prices article.prices div.price-cards div.big {
-    -webkit-box-flex: .49;
-        -ms-flex: .49;
-            flex: .49;
+  section.prices article.prices div.content-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: 0;
   }
-  section.prices article.prices div.price-cards div.small {
-    -webkit-box-flex: .49;
-        -ms-flex: .49;
-            flex: .49;
+  section.prices article.prices div.content-container div.small {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  section.prices article.prices div.content-container div.small div.subtitle-container {
+    margin-bottom: 8px;
+  }
+  section.prices article.prices div.content-container div.small div.subtitle-container h2 {
+    font-size: 23px;
+    text-align: center;
+  }
+  section.prices article.prices div.content-container div.small div.paragraph-container {
+    margin-bottom: 8px;
+  }
+  section.prices article.prices div.content-container div.small div.paragraph-container p {
+    width: 100%;
+    text-align: center;
+  }
+  section.prices article.prices div.content-container div.small div.button-container {
+    margin-top: 8px;
+  }
+  section.prices article.prices div.content-container div.small div.button-container a {
+    padding: 10px 100px;
+  }
+  section.prices article.prices div.content-container div.small div.button-container a img {
+    width: 35%;
+  }
+  section.prices article.prices div.content-container div.big {
+    margin-top: 64px;
+    width: 100%;
+    padding-bottom: 32px;
+  }
+  section.videos {
+    padding: 0 16px;
   }
   section.videos article.demo-video div.subtitle-container br {
     display: none;
@@ -57,35 +113,35 @@
     font-size: 26px;
     margin: 16px 0;
   }
-  section.getting-started {
-    padding: 0 16px 16px 16px;
+  div.getting-started {
+    padding: 0 16px 0 16px;
   }
-  section.getting-started div.subtitle-container h2 {
+  div.getting-started div.subtitle-container h2 {
     font-size: 26px;
     margin: 16px 0;
   }
-  section.getting-started div.content div.content-left {
+  div.getting-started div.content div.content-left {
     -webkit-box-flex: .60;
         -ms-flex: .60;
             flex: .60;
   }
-  section.getting-started div.content div.content-right {
+  div.getting-started div.content div.content-right {
     -webkit-box-flex: .40;
         -ms-flex: .40;
             flex: .40;
     padding-left: 16px;
   }
-  section.getting-started div.content div.content-right h3 {
+  div.getting-started div.content div.content-right h3 {
     font-size: 19px;
   }
-  section.getting-started div.content div.content-right span {
+  div.getting-started div.content div.content-right span {
     font-size: 15px;
   }
-  section.getting-started div.content div.content-right div.link-container a {
+  div.getting-started div.content div.content-right div.link-container a {
     font-size: 15px;
   }
   section.contact {
-    padding: 32px;
+    padding: 32px 16px;
   }
   section.contact div.contact-content {
     -webkit-box-orient: vertical;
