--- a/public/stylesheets/resp_945.scss
+++ b/public/stylesheets/resp_945.scss
@@ -46,7 +46,27 @@
         }
     
         div.feature-cards{
+            
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            padding: 64px;
+            margin: -32px 0;
+            
             article{
+
+                &:nth-child(1){
+                    transform: translateX(-50%);
+                }
+                &:nth-child(2){
+                    transform: translateX(50%);
+                }
+                &:nth-child(3){
+                    transform: translateX(-50%);
+                }
+                &:nth-child(4){
+                    transform: translateX(50%);
+                }
+
                 div.feature-card-img{
                     img{
                         width: 240px;
@@ -68,30 +88,58 @@
     }
     
     section.prices{
-        
         padding: 0 16px;
-    
-        div.subtitle-container{
-            h2{
-                font-size: 26px;
-                margin: 16px 0;
-            }
-        }
-    
         article.prices{
-            div.price-cards{
-                div.big {
-                    flex: .49;
+            div.subtitle-container{
+                h2{
+                    font-size: 26px;
                 }
+            }
+
+            div.content-container{
+
+                flex-direction: column-reverse;
+                margin-top: 0;
     
                 div.small{
-                    flex: .49;
+                    align-items: center;
+                    div.subtitle-container{
+                        margin-bottom: 8px;
+                        h2{
+                            font-size: 23px;
+                            text-align: center;
+                        }
+                    }
+                    div.paragraph-container{
+                        margin-bottom: 8px;
+                        p{
+                            width: 100%;
+                            text-align: center;
+                        }
+                    }
+                    div.button-container{
+                        margin-top: 8px;
+                        a{
+                            padding: 10px 100px;
+                            img{
+                                width: 35%;
+                            }
+                        }
+    
+                    }
+                }
+
+                div.big{
+                    margin-top: 64px;
+                    width: 100%;
+                    padding-bottom: 32px;
                 }
             }
         }
     }
     
     section.videos{
+        padding: 0 16px;
         article.demo-video{
             div.subtitle-container{
                 br{
@@ -106,9 +154,9 @@
         }
     }
     
-    section.getting-started{
+    div.getting-started{
     
-        padding: 0 16px 16px 16px;
+        padding: 0 16px 0 16px;
     
         div.subtitle-container{
             h2{
@@ -146,7 +194,7 @@
     }
 
     section.contact{
-        padding: 32px;
+        padding: 32px 16px;
     
         div.contact-content{
 
